--- a/SolucionVS/CapaPresentacion/CapaPresentacion.csproj
+++ b/SolucionVS/CapaPresentacion/CapaPresentacion.csproj
@@ -189,6 +189,12 @@
     <Compile Include="frmCliente_Proveedor.Designer.cs">
       <DependentUpon>frmCliente_Proveedor.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCompras.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCompras.Designer.cs">
+      <DependentUpon>frmCompras.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmEmpleado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -417,6 +423,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmCliente_Proveedor.resx">
       <DependentUpon>frmCliente_Proveedor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCompras.resx">
+      <DependentUpon>frmCompras.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmEmpleado.resx">
       <DependentUpon>frmEmpleado.cs</DependentUpon>
