Creación de las clases para la capa de datos y negocios del formulario de compras

--- a/SolucionVS/CapaDeDatos/CapaDeDatos.csproj
+++ b/SolucionVS/CapaDeDatos/CapaDeDatos.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="agregar usuario.cs" />
+    <Compile Include="DCompras.cs" />
     <Compile Include="CDAgregarCliente.cs" />
     <Compile Include="CDAgregarProveedor.cs" />
     <Compile Include="CDAgregarTrabajador.cs" />
