--- a/SolucionVS/CapaDeDatos/packages.config
+++ b/SolucionVS/CapaDeDatos/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net48" />
   <package id="Microsoft.ReportViewer.Windows" version="11.0.3452" targetFramework="net48" />
   <package id="Microsoft.SqlServer.Types" version="11.0.2" targetFramework="net48" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net48" />
 </packages>
