--- a/SolucionVS/CapaDeDatos/CapaDeDatos.csproj
+++ b/SolucionVS/CapaDeDatos/CapaDeDatos.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ComprovarCliente.cs" />
     <Compile Include="ComprovarProveedor.cs" />
     <Compile Include="DCliente_Proveedor.cs" />
+    <Compile Include="DDetalleV.cs" />
     <Compile Include="DEmpleado.cs" />
     <Compile Include="DProducto.cs" />
     <Compile Include="DVenta.cs" />
