--- a/SolucionVS/CapaDeDatos/CapaDeDatos.csproj
+++ b/SolucionVS/CapaDeDatos/CapaDeDatos.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="agregar usuario.cs" />
-    <Compile Include="DCompras.cs" />
+    <Compile Include="DCompra.cs" />
     <Compile Include="CDAgregarCliente.cs" />
     <Compile Include="CDAgregarProveedor.cs" />
     <Compile Include="CDAgregarTrabajador.cs" />
