--- a/SolucionVS/CapaNegocios/CapaNegocios.csproj
+++ b/SolucionVS/CapaNegocios/CapaNegocios.csproj
@@ -48,6 +48,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,7 +69,7 @@
     <Compile Include="CN_CompraProducto.cs" />
     <Compile Include="Metrica.cs" />
     <Compile Include="NCliente_Proveedor.cs" />
-    <Compile Include="NCompras.cs" />
+    <Compile Include="NCompra.cs" />
     <Compile Include="NEmpleado.cs" />
     <Compile Include="NProducto.cs" />
     <Compile Include="NVenta.cs" />
